# labrat

./: Cargo.toml  README.md
src/: client.rs  html.rs  keys.rs  lib.rs  resources.rs
src/resources/: comment.rs  header.rs  journal.rs  msg.rs  user.rs  view.rs
src/resources/msg/: others.rs  submissions.rs
tests/: parse.rs
tests/resources/journal/: header_footer.html
tests/resources/msg/others/: others.html
tests/resources/msg/submissions/: next.html  prev.html
tests/resources/view/: flash.html  image.html  music.html  nsfw.html  story.html
