[package]
name = "labrat"
description = "A FurAffinity library."
version = "0.1.0"
authors = ["Vypo Mouse <vypo@fursuits.by>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Vypo/labrat.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
