[package]
name = "labrat"
description = "A FurAffinity library."
version = "0.1.1-dev"
authors = ["Vypo Mouse <vypo@fursuits.by>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Vypo/labrat.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
scraper = "0.12.0"
snafu = "0.6.0"
url = "2.1.1"
reqwest = { version = "0.10.8", default-features = false, features = ["rustls-tls", "cookies", "gzip", "brotli"] }
tokio = { version = "0.2.22", features = ["macros", "sync"] }
serde = "1.0.114"
serde_json = "1.0.58"
