[package]
name = "labrat"
description = "A FurAffinity library."
version = "0.1.1-dev"
authors = ["Vypo Mouse <vypo@fursuits.by>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Vypo/labrat.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
scraper = "0.12.0"
snafu = "0.6.10"
url = "2.2.1"
reqwest = { version = "0.11.1", default-features = false, features = ["rustls-tls", "cookies", "gzip", "brotli"] }
tokio = { version = "1.2.0", features = ["macros", "sync", "rt-multi-thread"] }
serde = "1.0.123"
serde_json = "1.0.64"
ego-tree = "0.6.2"
htmlescape = "0.3.1"
selectors = "0.22.0"
regex = "1.4.3"
lazy_static = "1.4.0"
